# super_mario_biv

./: .gitignore  CMakeLists.txt  QT_IMPLEMENTATION_SUMMARY.md  README_QT.md  build.sh
src/: CMakeLists.txt  main.cpp
src/controller/: game.cpp
src/levels/: first_level.cpp  second_level.cpp  third_level.cpp  third_level.hpp
src/model/: map_movable.hpp  movable.hpp  ui_factory.hpp
src/objects/: CMakeLists.txt  flying_enemy.cpp  flying_enemy.hpp  jumping_enemy.cpp  jumping_enemy.hpp
src/os_controls/unix/qt_input/: qt_init_settings.cpp  qt_key_mapper.cpp  qt_key_mapper.hpp
src/os_controls/windows/: os_control_settings.cpp  user_input.cpp
src/ui/console/: console_game_map.cpp  console_game_map.hpp  console_ui_factory.cpp  console_ui_factory.hpp  console_ui_obj_rect_adapter.cpp
src/ui/console/ui_objects/: CMakeLists.txt
src/ui/qt/: qt_game_map.cpp  qt_game_map.hpp  qt_game_window.cpp  qt_game_window.hpp  qt_ui_factory.cpp  qt_ui_factory.hpp
src/ui/qt/ui_objects/: qt_box.cpp  qt_box.hpp  qt_enemy.cpp  qt_enemy.hpp  qt_flying_enemy.cpp  qt_flying_enemy.hpp  qt_full_box.cpp  qt_full_box.hpp  qt_jumping_enemy.cpp  qt_jumping_enemy.hpp  qt_money.cpp  qt_money.hpp  qt_ship.cpp  qt_ship.hpp
